--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-  
+  <link href="./css/style.css" type="text/css" rel="stylesheet">
 
   <title>MCL-Group</title>
 </head>
@@ -14,7 +14,7 @@
 <body>
   <!-- Navbar Component -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#"><img src=./images/MCL-logo2.jpg alt="MCL logo" width="160" height="40"></a>
+    <a class="navbar-brand" href="#"><img src=./images/MCL_logo3.PNG alt="MCL logo" width="160" height="70"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -61,7 +61,7 @@
         <div class="col-12 col-lg-4">
           <div class="card w-90 text-center mb-4 mt-4">
             <div class="text-center">
-            <img src="./images/MCL-logo3.PNG" style="width: 60%;" class="card-img-top" alt="...">
+            <img src="./images/MCL_logo3.PNG" style="width: 60%;" class="card-img-top" alt="...">
           </div>
             <div class="card-body">
               <h5 class="card-title ">Mekar Citra Lestari Publisher</h5>
@@ -118,7 +118,7 @@
      <div class="col-12 col-md-6 col-lg-3">
        <br>
        <div class="imgmcl">
-      <img src=./images/MCL-logo3.PNG alt="MCL logo" >
+      <img src=./images/MCL_logo3.PNG alt="MCL logo" >
     </div>
      </div>
      <div class="col-md-6 col-lg-3">
