--- a/publisher.html
+++ b/publisher.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-  <link href="/Users/ardirakhmat/Downloads/Adhoc/css/style.css" type="text/css" rel="stylesheet">
+  <link href="./css/style.css" type="text/css" rel="stylesheet">
 
   <title>MCL-Group</title>
 </head>
@@ -14,7 +14,7 @@
 <body>
   <!-- Navbar Component -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="./index.html"><img src=./images/MCL-logo2.jpg alt="MCL logo" width="160" height="40"></a>
+    <a class="navbar-brand" href="./index.html"><img src=./images/MCL_logo3.PNG alt="MCL logo" width="160" height="70"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -46,8 +46,8 @@
   <!-- Content-->
   
   
-  <h3 class="font-italic font-weight-light ml-5 mr-5 mb-4 mt-5 text-center">"Karya yang berasal dari hati adalah karya yang patut untuk diapresiasi."</h3>
-  <p class="text-center mb-5"><span><b>-Rosidayati Rozalina</b></span>, Founder PT. Mekar Citra Lestari</p>
+  <h3 class="font-italic font-weight-light ml-5 mr-5 mb-4 mt-5 text-center">"Karya yang berasal dari hati patut untuk diapresiasi."</h3>
+  <p class="text-center mb-5"><span><b>-Rosidayati Rozalina</b></span>, Founder PT. Mekar Cipta Lestari</p>
    
 
     
@@ -55,7 +55,7 @@
     <!--Profil-->
   <div class="text-center bg-light p-5">
   
-<p class=" p-3 mt-3 ml-5 mr-5 jarak ">Penerbit Mekar Citra Lestari adalah salah satu dari unit bisnis PT. Mekar Cipta Lestari yang resmi didirikan pada 27 Januari 2020. Berawal dari inisiasi Rosidayati Rozalina yang saat itu masih menjabat sebagai ketua organisasi penerbit di Indonesia. Penerbit Mekar Citra Lestari lahir di tengah kondisi new normal yang disebabkan oleh pandemi virus corona dimana era digitalisasi media menjadi bagian yang sangat penting di kehidupan sehari-hari.
+<p class=" p-3 mt-3 ml-3 mr-3 jarak ">Penerbit Mekar Cipta Lestari adalah salah satu dari unit bisnis PT. Mekar Cipta Lestari yang resmi didirikan pada 27 Januari 2020. Berawal dari inisiasi Rosidayati Rozalina yang saat itu masih menjabat sebagai ketua organisasi penerbit di Indonesia. Penerbit Mekar Citra Lestari lahir di tengah kondisi new normal yang disebabkan oleh pandemi virus corona dimana era digitalisasi media menjadi bagian yang sangat penting di kehidupan sehari-hari.
 </p>
 
   
@@ -75,7 +75,7 @@
         <div class="col-12 col-md-6 col-lg-3">
           <br>
           <div class="imgmcl">
-         <img src=./images/MCL-logo3.png alt="MCL logo" >
+         <img src=./images/MCL_logo3.PNG alt="MCL logo" >
        </div>
         </div>
         <div class="col-md-6 col-lg-3">
